postgresql-common (76) UNRELEASED; urgency=low

  * pg_wrapper: Revert changes of version 74 to make this work with taint
    mode. It breaks too many custom setups, and Perl just doesn't allow to
    untaint $PATH bluntly. If you run pg_wrapper from a perl script with taint
    checks enabled, you have to clean $PATH yourself. Closes: #427894

 -- Martin Pitt <mpitt@debian.org>  Sat, 23 Jun 2007 19:43:55 +0200

postgresql-common (75) unstable; urgency=low

  The "Never run the test suite without 7.4 just because it is deprecated and
  about to be removed" release. Sorry for the trouble.

  * pg_ctlcluster: Partially revert PATH cleansing to make pg_ctl work on 7.4
    again. This can be dropped again once 7.4 is actually removed from the
    archive. Closes: #425594

 -- Martin Pitt <mpitt@debian.org>  Thu, 24 May 2007 09:26:45 +0200

postgresql-common (74) unstable; urgency=low

  * debian/supported_versions:
    - Match any 4.0* as Debian Etch to get the correct set of supported
      versions. Closes: #420915
    - Add Lenny/unstable: only support 8.2.
    - Add Ubuntu 7.10.
    - Don't fail if the distribution cannot be determined at all, only print
      out a warning.
  * pg_createcluster, pg_ctlcluster, pg_dropcluster, pg_maintenance,
    pg_upgradecluster: Strip down PATH untainting to the absolute minimum, to
    not fall over if e. g. /usr/local/bin is misconfigured to be world
    writable. Closes: #420565
  * pg_wrapper: Make this script work with taint checks enabled. This happens
    in a pretty blunt way, since it does not actually make sense to enforce
    environment variables, etc. It should just not fail when being called from
    a -T perl script. Closes: #422129
  * debian/postgresql-common.postinst: Do not hide failures of the init
    script on restart.
  * debian/postgresql-common.config, debian/postgresql-common.templates:
    Remove the check for an untransitioned postgresql, since it was only